--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-location": "^3.2.16"
+    "react-location": "^3.2.16",
+    "react-query": "^3.34.7"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@vitejs/plugin-react": "^1.1.3",
     "typescript": "^4.4.4",
-    "vite": "^2.7.0"
+    "vite": "^2.7.9"
   }
 }
