--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "cross-env prod=true tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.1.3",
+    "cross-env": "^7.0.3",
     "typescript": "^4.4.4",
     "vite": "^2.7.9"
   }
