--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.6",
     "ky": "^0.28.7",
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
