--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@stitches/react": "^1.2.6",
+    "color2k": "^1.2.5",
     "ky": "^0.28.7",
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
